<resources>
    <string name="app_name">Al Forat</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="create_an_account">Create a new account</string>
    <string name="user_name">User name</string>
    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">You already have an account! log in</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="bank_account">Bank account</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="send">send</string>
    <string name="skip">skip</string>
    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>
    <string name="pass_short">Password to short</string>
    <string name="new_order">New Order</string>

    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="inv_now">Invalid now</string>
    <string name="recov_msg">Recover your account.We will send you a link to change your password</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="share">Share</string>
    <string name="order_number">Order number</string>
    <string name="city">City</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="conditions">Conditions</string>
    <string name="choose">Choose</string>
    <string name="day">Day</string>
    <string name="more2">More</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="ch_city">Choose city</string>
    <string name="ch_image">Choose image</string>
    <string name="ch_bank">Choose bank</string>
    <string name="inc_phone_pas">Incorrect user name or password</string>
    <string name="ver_code_sent">Verification code is sent</string>
    <string name="order_sent_suc">Order sent successfully.the order number is :</string>
    <string name="order_state">Order state</string>
    <string name="details">Order details</string>

    <string name="my_order">My order</string>
    <string name="no_orders_to_display">No Orders to display</string>
    <string name="price">Price</string>
    <string name="no_notifications_to_display">No notifications to display</string>
    <string name="send_order">Send Order</string>

    <string name="offer">Offers</string>
    <string name="no_offers_to_display">No Offers to display</string>
    <string name="no_services_to_display">No Services to display</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="location_on_map">Location on map</string>
    <string name="date">Date of receipt</string>
    <string name="time">Time</string>
    <string name="order_now">Order now</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="select_location">Select Location</string>
    <string name="total">Total</string>
    <string name="cache">Cache</string>
    <string name="mada">Mada</string>
    <string name="enter_discount_code">Enter discount code</string>
    <string name="discount">Discount</string>
    <string name="stores">Stores</string>
    <string name="clients">Clients</string>
    <string name="sales">Sales</string>
    <string name="expenses">Expenses</string>
    <string name="reports">Reports</string>
    <string name="bills">Bills</string>
    <string name="sales_report">Client account report</string>
    <string name="stores_report">My account report</string>
    <string name="clients_reports">Clients Reports</string>
    <string name="expenses_report">Expenses report</string>
    <string name="search">Search...</string>
    <string name="client_name">Client name</string>
    <string name="balance">Balance</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="tax_number">Tax number</string>
    <string name="commercial_registration_no">Commercial Registration No</string>
    <string name="maximum_money">Maximum money</string>
    <string name="attachments">Attachments</string>
    <string name="expenses_type">Expenses type</string>
    <string name="money">Money</string>
    <string name="statement">Statement</string>
    <string name="ch_area">Choose area</string>
    <string name="attachment">Choose attachment</string>
    <string name="user_not_active">User not active</string>
    <string name="no_clients_to_display">No clients to display</string>
    <string name="creditor_balance">Creditor balance</string>
    <string name="debtor_balance">Debtor balance</string>
    <string name="orders_number">Orders number</string>
    <string name="no_products_to_display">No products to display</string>
    <string name="create_bill">Create Bill</string>
    <string name="cost_center">Cost center</string>
    <string name="due_date">Due date</string>
    <string name="invoice_statement">Invoice statement</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="bonus">Bonus</string>
    <string name="discount2">Discount %</string>
    <string name="tax2">Tax %</string>
    <string name="bill_date">Bill date</string>
    <string name="discount_total">Discount total</string>
    <string name="tax_total">Tax total</string>
    <string name="net_total">Net total</string>
    <string name="add_item_to_bill">Add item to bill</string>
    <string name="select">Select</string>
    <string name="add_item">Add Item</string>
    <string name="amount_not_aval">Amount not available</string>
    <string name="ch_item">Choose item</string>
    <string name="ch_center">Choose center cost</string>
    <string name="ch_price">Choose price</string>
    <string name="inv_amount">Invalid amount ,available amount is: </string>
    <string name="in_tax">invalid tax</string>
    <string name="ch_disc">Choose discount</string>
    <string name="un_def">Undefined</string>
    <string name="no_data">No data</string>
    <string name="op_date">Op date</string>
    <string name="op_type">Op type</string>
    <string name="op_number">Op number</string>
    <string name="debtor">Debtor</string>
    <string name="creditor">Creditor</string>
    <string name="balance2">Balance</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="bill_number">Bill number</string>
    <string name="bill_cost">Bill cost :</string>
    <string name="no_bills">No bills</string>
    <string name="details2">Details :</string>
    <string name="products_details">Products details :</string>
    <string name="amount2">Amount :</string>
    <string name="cost">Cost :</string>
    <string name="prices">Prices :</string>
    <string name="empty_cart">Empty cart</string>
    <string name="no_name">No name</string>
    <string name="no_phone">No phone</string>
    <string name="no_address">No address</string>
    <string name="charge_bonds">Shipping Bonds</string>
    <string name="commission">Commission</string>
    <string name="shipping_num">Shipping-num</string>
    <string name="change_language">Change language</string>


</resources>
