<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <data>
        <variable
            name="backListener"
            type="com.creative.share.apps.alforat.interfaces.Listeners.BackListener"/>
        <variable
            name="lang"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_choose_order_type.ChooseOrderTypeActivity"
        android:background="@color/gray0"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="@{()->backListener.back()}"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_arrow_left"
                    android:tint="@color/white"
                    android:padding="8dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    />
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/white"
                    android:clickable="false"
                    android:longClickable="false"
                    android:textSize="16sp"
                    android:text="@string/reports"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:id="@+id/llDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/tvClientName"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1.1"
                android:background="@drawable/bg_container_product"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="@string/client_name"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"

                />

            <TextView
                android:id="@+id/tvFromDate"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1.1"
                android:background="@drawable/bg_container_product"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/from_date"


                />

            <TextView
                android:id="@+id/tvToDate"

                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1.1"
                android:background="@drawable/bg_container_product"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/to_date"


                />

            <LinearLayout
                android:id="@+id/llSearch"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimary"
                android:layout_weight=".7"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_search"
                    android:tint="@color/white"
                    android:padding="3dp"

                    android:clickable="false"
                    android:longClickable="false"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/search"
                    android:clickable="false"
                    android:longClickable="false"

                    />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/llDate"

            android:weightSum="6"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/op_date"
                android:background="@drawable/border"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/op_type"
                android:background="@drawable/border"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/op_number"
                android:background="@drawable/border"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/debtor"
                android:background="@drawable/border"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/creditor"
                android:background="@drawable/border"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/balance2"
                android:background="@drawable/border"

                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/ll"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ProgressBar

                android:id="@+id/progBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"

                />
            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/no_data"
                android:visibility="gone"
                />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
