<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <data>
        <variable
            name="backListener"
            type="com.creative.share.apps.alforat.interfaces.Listeners.BackListener"/>
        <variable
            name="lang"
            type="String" />

        <variable
            name="url"
            type="String" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray1">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="@{()->backListener.back()}"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_arrow_left"
                    android:tint="@color/white"
                    android:padding="8dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    />
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/white"
                    android:clickable="false"
                    android:longClickable="false"
                    android:textSize="16sp"
                    android:text="@string/back"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:padding="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/expenses_type"
                    />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/container_bg"
                    >
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        >

                    </Spinner>
                </FrameLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/date"
                    android:layout_marginTop="5dp"
                    />
                <LinearLayout
                    android:id="@+id/llDate"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/container_bg"
                    >
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_calendar"
                        android:padding="10dp"
                        android:tint="@color/colorPrimary"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:background="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center_vertical"
                        android:clickable="false"
                        android:longClickable="false"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/money"
                    android:layout_marginTop="5dp"
                    />
                <EditText
                    android:id="@+id/edtMoney"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/container_bg"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    />




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/statement"
                    android:layout_marginTop="5dp"
                    />
                <EditText
                    android:id="@+id/edtStatement"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/container_bg"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    />








                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/attachments"
                    android:layout_marginTop="5dp"
                    />

                <FrameLayout
                    android:id="@+id/flImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    >
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:riv_border_color="@color/gray4"
                        app:riv_corner_radius="5dp"
                        app:riv_border_width="1dp"
                        android:background="@drawable/container_bg"
                        url="@{url}"
                        />
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_camera"
                        android:tint="@color/gray4"
                        />
                </FrameLayout>



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/send"
                    />
            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
